samples/_failures_safe/1761498580_b1f88c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ac06bc1.c: In function ‘parse_string’:
./samples/SAFE/__tmp_2ac06bc1.c:167:13: error: expected ‘,’ or ‘;’ at end of input
  167 |             int len = t->position - start - 1
      |             ^~~
./samples/SAFE/__tmp_2ac06bc1.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ac06bc1.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ac06bc1.c:167:13: error: expected declaration or statement at end of input
